egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-eventlistener
  namespace: default
spec:
  podSelector:
    matchLabels:
      eventlistener: listener
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.56.0/24
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
